Fix selection in dark mode

--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -105,7 +105,7 @@ time {
     background: #b5deff;
 
     .darkmode & {
-        background: #1b2a4b;
+        color: #232840;
     }
 }
 
